--- a/Example1.qmd
+++ b/Example1.qmd
@@ -19,9 +19,13 @@ When you click the **Render** button a document will be generated that includes 
 
 You can add options to executable code like this
 
-```{r}
-#| echo: false
-2 * 2
-```
+```{r boxplot}
 
-The `echo: false` option disables the printing of code (only output is displayed).
+data("mtcars")
+
+boxplot(mtcars$hp ~ factor(mtcars$cyl), main= "Boxplot HP by Cylinders"
+        , ylab = "Horse Power", xlab = "Number of Cylinders")
+
+
+
+```
